--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ h1{
     background-color: blue;
     color: white;
     font-size: 28px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;  
+    font-family: inherit;
     border: none;
     display: flex;
     align-items: center;
@@ -27,7 +27,7 @@ h2{
     background-color: gray;
     color: white;
     font-size: 25px; 
-    font-family: Arial, Helvetica, sans-serif;   
+    font-family: inherit;   
     border: none;
     display: flex;
     align-items: center;
@@ -38,7 +38,7 @@ h3{
     background-color: coral;
     color: white;
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;         
+    font-family: inherit;        
     border: none;
     display: flex;
     align-items: center;
@@ -48,20 +48,21 @@ h3{
 
 h4{
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit;
     font-weight: bold;
     text-align: center;
 }
 
 h5{
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit;
     font-weight: bold;
     text-align: center;
 }
 
 p{
     font-size: 20px;
+    font-family: inherit;
     color: black;
     width: 95%;
     text-align: justify;    
@@ -72,7 +73,7 @@ p{
 
 .menuLi{ 
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;   
+    font-family: inherit;  
     color: blueviolet;    
     text-decoration: none; 
        
@@ -125,7 +126,7 @@ p{
     }
 
     h1{
-        font: size 40px;;
+        font: size 42px;;
         text-align: center;
     }
 
@@ -192,7 +193,7 @@ p{
     }
 
     h1{
-        font: size 40px;;
+        font: size 42px;;
         text-align: center;
     }
 
