--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ p{
 
 
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
     body{
         margin-left: 10px;
         margin-right: 10px;
@@ -205,6 +205,21 @@ p{
         flex-direction: column;
         gap: 25px;
     }
+
+    .item{
+        height: 35rem;
+        width: 90%;
+    }
+
+    .item2{
+        height: 35rem;
+        width: 90%;
+    }
+
+    .item3{
+        height: 35rem;
+        width: 90%;
+    }
     
     
 }
@@ -212,7 +227,7 @@ p{
 
 
 
-@media (max-width: 500px) {
+@media (max-width: 480px) {
     body{
         margin-left: 10px;
         margin-right: 10px;
@@ -274,5 +289,21 @@ p{
         flex-direction: column;
         gap: 25px;
     }
+
+    .item{
+        height: 35rem;
+        width: 90%;
+    }
+
+    .item2{
+        height: 35rem;
+        width: 90%;
+    }
+
+    .item3{
+        height: 35rem;
+        width: 90%;
+    }
+
     
 }
