--- a/css/index.css
+++ b/css/index.css
@@ -118,25 +118,26 @@ p{
 .contener{     
     display: flex;
     flex-wrap: nowrap;
-    justify-content: center;    
+    justify-content: center;
+    align-items: center;    
      
 }
 
 .item{    
     
-    margin: 20px;
+    margin: 10px;
     padding: 10px;    
    
 }
 
 .item2{
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
    
 }
 
 .item3{
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
    
 }
