--- a/css/index.css
+++ b/css/index.css
@@ -201,25 +201,28 @@ p{
 
     } 
     
-    .contener{
-        display: flex;
+    .contener{        
         flex-direction: column;
         gap: 25px;
+        max-width: 90%;
     }
 
     .item{
         height: 35rem;
-        width: 90%;
+        max-width: 90%;
+        margin-bottom: 15px;
     }
 
     .item2{
         height: 35rem;
-        width: 90%;
+        max-width: 90%;
+        margin-bottom: 15px;
     }
 
     .item3{
         height: 35rem;
-        width: 90%;
+        max-width: 90%;
+        margin-bottom: 15px;
     }
     
     
@@ -285,10 +288,10 @@ p{
 
     } 
     
-    .contener{
-        display: flex;
+    .contener{        
         flex-direction: column;
         gap: 25px;
+        width: 90%;
     }
 
     .item{
